[gd_scene load_steps=5 format=3 uid="uid://dt01ulyvwipk8"]

[ext_resource type="Texture2D" uid="uid://v7p8be7crsvw" path="res://Untitled.png" id="1_ct4ga"]
[ext_resource type="Script" path="res://Control.gd" id="1_y80l6"]
[ext_resource type="PackedScene" uid="uid://dktrb14pscb0e" path="res://character_body_2d.tscn" id="2_ja8tu"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_7d8g5"]
width = 20
height = 20

[node name="World" type="Node2D"]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(63.6875, -14.9376)
scale = Vector2(32.7444, 34.433)
texture = ExtResource("1_ct4ga")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y80l6")

[node name="Panel" type="Panel" parent="CanvasLayer/Control"]
self_modulate = Color(0.298039, 0.298039, 0.298039, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.551215
anchor_top = 0.00617284
anchor_right = 1.00087
anchor_bottom = 0.305556
metadata/_edit_use_anchors_ = true

[node name="Start" type="Button" parent="CanvasLayer/Control/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.471042
anchor_top = 0.757732
anchor_right = 0.601477
anchor_bottom = 0.917526
text = "start"
metadata/_edit_use_anchors_ = true

[node name="Ease_Label" type="Label" parent="CanvasLayer/Control/Panel"]
layout_mode = 0
anchor_left = 0.758687
anchor_top = 0.0168067
anchor_right = 0.835907
anchor_bottom = 0.12605
offset_bottom = 4.80672
text = "Ease"
metadata/_edit_use_anchors_ = true

[node name="Ease" type="OptionButton" parent="CanvasLayer/Control/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.61583
anchor_top = 0.147059
anchor_right = 0.982625
anchor_bottom = 0.277311
offset_bottom = 4.0
item_count = 4
selected = 0
popup/item_0/text = "EASE_IN"
popup/item_0/id = 0
popup/item_1/text = "EASE_OUT"
popup/item_1/id = 1
popup/item_2/text = "EASE_IN_OUT"
popup/item_2/id = 2
popup/item_3/text = "EASE_OUT_IN"
popup/item_3/id = 3
metadata/_edit_use_anchors_ = true

[node name="Transition_Label" type="Label" parent="CanvasLayer/Control/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.185328
anchor_top = 0.0294118
anchor_right = 0.337838
anchor_bottom = 0.138655
text = "Transition"
metadata/_edit_use_anchors_ = true

[node name="Transition" type="OptionButton" parent="CanvasLayer/Control/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.050193
anchor_top = 0.142857
anchor_right = 0.476834
anchor_bottom = 0.285714
offset_bottom = 1.0
item_count = 12
selected = 0
popup/item_0/text = "TRANS_LINEAR"
popup/item_0/id = 0
popup/item_1/text = "TRANS_SINE"
popup/item_1/id = 1
popup/item_2/text = "TRANS_QUINT"
popup/item_2/id = 2
popup/item_3/text = "TRANS_QUART"
popup/item_3/id = 3
popup/item_4/text = "TRANS_QUAD"
popup/item_4/id = 4
popup/item_5/text = "TRANS_EXPO"
popup/item_5/id = 5
popup/item_6/text = "TRANS_ELASTIC"
popup/item_6/id = 6
popup/item_7/text = "TRANS_CUBIC"
popup/item_7/id = 7
popup/item_8/text = "TRANS_CIRC"
popup/item_8/id = 8
popup/item_9/text = "TRANS_BOUNCE"
popup/item_9/id = 9
popup/item_10/text = "TRANS_BACK"
popup/item_10/id = 10
popup/item_11/text = "TRANS_SPRING"
popup/item_11/id = 11
metadata/_edit_use_anchors_ = true

[node name="Time_Label" type="Label" parent="CanvasLayer/Control/Panel"]
layout_mode = 0
anchor_left = 0.750965
anchor_top = 0.335052
anchor_right = 0.828185
anchor_bottom = 0.469072
text = "Time"
metadata/_edit_use_anchors_ = true

[node name="SpinBox" type="SpinBox" parent="CanvasLayer/Control/Panel"]
layout_mode = 0
anchor_left = 0.72973
anchor_top = 0.479381
anchor_right = 0.890082
anchor_bottom = 0.639175
step = 0.01
value = 1.0
update_on_text_changed = true
metadata/_edit_use_anchors_ = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.6, 0.6)

[node name="CharacterBody2D" parent="." instance=ExtResource("2_ja8tu")]
position = Vector2(-415, 2)

[node name="Starting_Position" type="Marker2D" parent="."]
position = Vector2(-414, 2)

[node name="Sprite2D" type="Sprite2D" parent="Starting_Position"]
texture = SubResource("NoiseTexture2D_7d8g5")

[node name="Ending_Position" type="Marker2D" parent="."]
position = Vector2(421, 0)

[node name="Sprite2D2" type="Sprite2D" parent="Ending_Position"]
texture = SubResource("NoiseTexture2D_7d8g5")

[connection signal="pressed" from="CanvasLayer/Control/Panel/Start" to="CanvasLayer/Control" method="_on_start_pressed"]
[connection signal="item_selected" from="CanvasLayer/Control/Panel/Ease" to="CanvasLayer/Control" method="_on_ease_item_selected"]
[connection signal="item_selected" from="CanvasLayer/Control/Panel/Transition" to="CanvasLayer/Control" method="_on_transition_item_selected"]
[connection signal="value_changed" from="CanvasLayer/Control/Panel/SpinBox" to="CanvasLayer/Control" method="_on_spin_box_value_changed"]
